methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:37: error: Unit does not take parameters
    seDecaler();
             ^