methods.picture.PictureMono2.scala.code
override def run() {
  

  
  def faireV() {
    avance(2);
    baisseBrosse();
    leveBrosse();
    
    avance();
    gauche();
    avance();
    baisseBrosse();
    leveBrosse();
    recule();
    droite();
    
    avance();
    baisseBrosse();
    leveBrosse();
    avance(2);
    gauche();
    
    
    
  }
  
  def seDecaler {
    
    avance(7);
  }
  
  for(i<-0 to 3) {
    
  
 faireV;
    seDecaler();
  
  }
 
  
}
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
